@@ -360,3 +360,35 @@ def autogenerate(dict, fs = SCons.Node.FS.default_fs, dir = None):
     for interp in AUTO_GEN_VARS:
         interp.instance(dir, fs).generate(dict)
 
+def render_tree(root, child_func, margin=[0], visited={}):
+    """
+    Render a tree of nodes into an ASCII tree view.
+    root - the root node of the tree
+    child_func - the function called to get the children of a node
+    margin - the format of the left margin to use for children of root.
+       1 results in a pipe, and 0 results in no pipe.
+    visited - a dictionart of visited nodes in the current branch
+    """
+
+    if visited.has_key(root):
+        return ""
+
+    children = child_func(root)
+    retval = ""
+    for pipe in margin[:-1]:
+        if pipe:
+            retval = retval + "| "
+        else:
+            retval = retval + "  "
+
+    retval = retval + "+-" + str(root) + "\n"
+    visited = copy.copy(visited)
+    visited[root] = 1
+
+    for i in range(len(children)):
+        margin.append(i<len(children)-1)
+        retval = retval + render_tree(children[i], child_func, margin, visited
+)
+        margin.pop()
+
+    return retval
